objects/Offer__c.object
<CustomObject>
    <fields>
        <fullName>Accepted_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepted Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Offer</relationshipLabel>
        <relationshipName>Offer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <description>Issue date</description>
        <label>Issue Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Joining_Date__c</fullName>
        <label>Joining Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Interval__c</fullName>
        <globalPicklist>Interval</globalPicklist>
        <label>Payment Interval</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Offer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OF-{0000}</displayFormat>
        <label>Offer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>JoiningDate_Later_Than_IssueDate</fullName>
        <active>true</active>
        <errorConditionFormula>Joining_Date__c &lt;  Issue_Date__c</errorConditionFormula>
        <errorMessage>Joining date can&apos;t be earlier than issue day</errorMessage>
    </validationRules>
</CustomObject>